--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<title>Planets</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> 
 	</head>
 	<body>
@@ -25,7 +25,7 @@
       </tr>
       <tr class="bord">
         <td>Mercury</td>
-        <td><img src="mercury.gif" alt="Mercury"></td>
+        <td><img src="images/mercury.gif" alt="Mercury"></td>
         <td>3.3 x 1023</td>
         <td>4879.4</td>
         <td>5420</td>
@@ -36,7 +36,7 @@
       </tr>
       <tr>
         <td>Venus</td>
-        <td><img src="venus.gif" alt="Venus"></td>
+        <td><img src="images/venus.gif" alt="Venus"></td>
         <td>4.87 x 10^24</td>
         <td>12104</td>
         <td>5250</td>
@@ -47,7 +47,7 @@
       </tr>
       <tr>
         <td>Mars</td>
-        <td><img src="mars.gif" alt="Mars"></td>
+        <td><img src="images/mars.gif" alt="Mars"></td>
         <td>6.42 x 10^23</td>
         <td>12104</td>
         <td>3940</td>
@@ -58,7 +58,7 @@
       </tr>
       <tr>
          <td>Earth</td>
-         <td><img src="earth.gif" alt="Earth"></td>
+         <td><img src="images/earth.gif" alt="Earth"></td>
          <td>5.98 x 1024</td>
          <td>12756</td>
          <td>5520</td>
